objects/blng__RevenueTransaction__c.object
<CustomObject>
    <customHelpPage>blng__revenueTransactionHelp</customHelpPage>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>AccountRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>ContractRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the credit note associated with this revenue schedule.</inlineHelpText>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>CreditNoteLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the debit note associated with this revenue schedule.</inlineHelpText>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>DebitNoteLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DeferredBalance__c</fullName>
        <inlineHelpText>Deferred revenue balance after recognizing revenue for this period.</inlineHelpText>
        <label>Deferred Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the invoice line associated with this revenue schedule.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>InvoiceLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the legal entity associated with this revenue transaction.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>LegalEntityRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the order product associated with this revenue schedule.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>OrderProductRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OriginalFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to the original finance period defined in the revenue schedule.</inlineHelpText>
        <label>Original Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>RevenueTransactions (Original Finance Period)</relationshipLabel>
        <relationshipName>RevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PreviouslyRecognizedRevenue__c</fullName>
        <inlineHelpText>Sum of all prior transactions using this revenue schedule.</inlineHelpText>
        <label>Previously Recognized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAmount__c</fullName>
        <inlineHelpText>Amount of revenue to recognize in this period.</inlineHelpText>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueDistributionMethod__c</fullName>
        <inlineHelpText>Refers to the distribution method selected in the revenue schedule. Describes how revenue is spread
        over a set time period, all at once, or manually-entered time period.</inlineHelpText>
        <label>Revenue Distribution Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinanceBook__c</fullName>
        <inlineHelpText>Refers to the finance book selected on the revenue schedule.</inlineHelpText>
        <label>Revenue Finance Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinancePeriodUniqueId__c</fullName>
        <label>RevenueFinancePeriodUniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinancePeriod__c</fullName>
        <inlineHelpText>Refers to the finance period selected on  the revenue schedule.</inlineHelpText>
        <label>Revenue Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>FinancePeriodRevenueTransactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The revenue recognition general ledger rule selected in the revenue schedule.</inlineHelpText>
        <label>Revenue Recognition GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>GLRuleRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Revenue recognition general ledger treatment</inlineHelpText>
        <label>Revenue Recognition GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>GLTreatmentRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The revenue recognition policy selected in the revenue schedule and used to calculate this transaction.</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>RevRecRuleRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionTreatment__c</fullName>
        <inlineHelpText>Refers to the revenue recognition treatment selected in the revenue schedule used to calculate this transaction.</inlineHelpText>
        <label>Revenue Recognition Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueSchedule__c</fullName>
        <inlineHelpText>Revenue schedule used for this transaction</inlineHelpText>
        <label>Revenue Schedule</label>
        <referenceTo>blng__RevenueSchedule__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>RevenueScheduleRevenueTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>Select whether this revenue is recognized now or deferred until later.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueTransactionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__SystemPeriodStartDate__c</fullName>
        <label>System Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Transaction</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>